--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^3.9.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.20"
